# 30-days-python

./: Cargo.toml  Dockerfile  README.md
markdown/: index.md
markdown/02_Day_Variables_builtin_functions/: 02_variables_builtin_functions.md
markdown/03_Day_Operators/: 03_operators.md
markdown/04_Day_Strings/: 04_strings.md
markdown/05_Day_Lists/: 05_lists.md
markdown/06_Day_Tuples/: 06_tuples.md
markdown/07_Day_Sets/: 07_sets.md
markdown/08_Day_Dictionaries/: 08_dictionaries.md
markdown/09_Day_Conditionals/: 09_conditionals.md
markdown/10_Day_Loops/: 10_loops.md
markdown/11_Day_Functions/: 11_functions.md
markdown/12_Day_Modules/: 12_modules.md
markdown/13_Day_List_comprehension/: 13_list_comprehension.md
markdown/14_Day_Higher_order_functions/: 14_higher_order_functions.md
markdown/15_Day_Python_type_errors/: 15_python_type_errors.md
markdown/16_Day_Python_date_time/: 16_python_datetime.md
markdown/17_Day_Exception_handling/: 17_exception_handling.md
markdown/18_Day_Regular_expressions/: 18_regular_expressions.md
markdown/19_Day_File_handling/: 19_file_handling.md
markdown/20_Day_Python_package_manager/: 20_python_package_manager.md
markdown/21_Day_Classes_and_objects/: 21_classes_and_objects.md
markdown/22_Day_Web_scraping/: 22_web_scraping.md
markdown/23_Day_Virtual_environment/: 23_virtual_environment.md
markdown/24_Day_Statistics/: 24_statistics.md
markdown/25_Day_Pandas/: 25_pandas.md
markdown/26_Day_Python_web/: 26_python_web.md
markdown/28_Day_API/: 28_API.md
src/: main.rs
static/: style.css
(+3 files in other folders)
