[package]
name = "dayspython"
version = "0.1.0"
edition = "2024"
authors = ["Mateo Lafalce <mateolafalce@protonmail.com>"]
repository = "https://github.com/mateolafalce/30-days-python"

[dependencies]
axum = "0.8.4"
comrak = "0.41.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
